Improve the appearance of the card header on smaller screens, prevent it from stretching too wide

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,4 +533,9 @@ i {
         width: 80vw;
         ;
     }
+
+    .card-header {
+        width: 75%;
+        margin: auto;
+    }
 }
